<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_eating_menu_item"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_eating"/>
    <item
        android:id="@+id/food_list_menu_item"
        android:showAsAction="never"
        android:title="@string/food_list"/>
    <item
        android:id="@+id/statistics_menu_item"
        android:showAsAction="never"
        android:title="@string/statistics"/>
    <item
        android:id="@+id/language_list_menu_item"
        android:showAsAction="never"
        android:title="@string/language"/>

    <item
        android:id="@+id/action_csv"
        android:icon="@android:drawable/ic_menu_upload"
        android:showAsAction="ifRoom|withText"
        android:title="@string/export_to_csv"/>

</menu>