<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_component_menu_item"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/add"/>
    <item
        android:id="@+id/save_eating_menu_item"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom"
        android:title="@string/delete_food"/>
    <item
        android:id="@+id/add_food_menu_item"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="never"
        android:title="@string/add_food_to_list"/>
    <item
        android:id="@+id/food_list_menu_item"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="never"
        android:title="@string/food_list"/>
    <item
        android:id="@+id/delete_eating_menu_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/delete_eating"/>

</menu>