<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_food"
        android:showAsAction="always|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/add_food_menu_item"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_food"/>

    <item
        android:id="@+id/action_upload_csv"
        android:icon="@android:drawable/ic_menu_upload"
        android:showAsAction="ifRoom|withText"
        android:title="@string/export_to_csv"/>

    <item
        android:id="@+id/action_download_csv"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="ifRoom|withText"
        android:title="@string/import_from_csv"/>

</menu>