<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_activated"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_tiny"
    android:paddingLeft="@dimen/margin_medium"
    android:paddingRight="@dimen/margin_medium"
    android:paddingTop="@dimen/margin_tiny" >

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/day_caption_background"
        android:gravity="center"
        android:paddingBottom="@dimen/margin_tiny"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_tiny"
        android:paddingTop="@dimen/margin_tiny" >

        <TextView
            android:id="@+id/kcal_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/kcal_colon"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/pfc_ratio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/pfc_ratio_colon"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/protein_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/protein_colon"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/fat_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fat_colon"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/carbs_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carbs_colon"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

</LinearLayout>