<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="meal"
            type="com.shakenbeer.nutrition.model.Meal" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_tiny"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_tiny">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/eating_caption_background"
            android:gravity="center"
            android:paddingBottom="@dimen/margin_tiny"
            android:text="@{@stringArray/eating_names[meal.number]}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            tools:text="Lunch"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_tiny"
            android:paddingTop="@dimen/margin_tiny">

            <TextView
                android:id="@+id/kcal_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@{@string/kcal(meal.kcal)}"
                android:textSize="@dimen/text_size_medium"
                tools:text="@string/kcal_colon" />

            <TextView
                android:id="@+id/pfc_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@{@string/pfc_ratio(meal.pfcRatio)}"
                android:textSize="@dimen/text_size_medium"
                tools:text="@string/pfc_ratio_colon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/protein_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{@string/protein(meal.protein)}"
                android:textSize="@dimen/text_size_small"
                tools:text="@string/protein_colon" />

            <TextView
                android:id="@+id/fat_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{@string/fat(meal.fat)}"
                android:textSize="@dimen/text_size_small"
                tools:text="@string/fat_colon" />

            <TextView
                android:id="@+id/carbs_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{@string/carbs(meal.carbs)}"
                android:textSize="@dimen/text_size_small"
                tools:text="@string/carbs_colon" />
        </LinearLayout>

    </LinearLayout>
</layout>