<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="food"
            type="com.shakenbeer.nutrition.model.Food" />

        <variable
            name="listener"
            type="com.shakenbeer.nutrition.food.FoodListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_tiny"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_tiny">

        <TextView
            android:id="@+id/new_food_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/food_caption_background"
            android:gravity="center"
            android:paddingBottom="@dimen/margin_tiny"
            android:text="@{food.name ?? @string/new_food}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            tools:text="@string/new_food" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_tiny"
                    android:text="@string/food_name" />

                <EditText
                    android:id="@+id/food_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:onTextChanged="@{(s, start, before, count) -> listener.onNameChanged(s)}"
                    android:text='@{food.name ?? ""}' />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_small"
                    android:text="@string/unit" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/unit_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:maxLength="8"
                        android:onTextChanged="@{(s, start, before, count) -> listener.onUnitAmountChanged(s)}"
                        android:text="@{String.valueOf(food.unit)}" />

                    <EditText
                        android:id="@+id/unit_name_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:onTextChanged="@{(s, start, before, count) -> listener.onUnitNameChanged(s)}"
                        android:text="@{food.unitName}" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_small"
                    android:text="@string/protein_per_unit" />

                <EditText
                    android:id="@+id/protein_per_unit_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:onTextChanged="@{(s, start, before, count) -> listener.onProteinChanged(s)}"
                    android:text="@{String.valueOf(food.proteinPerUnit)}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_small"
                    android:text="@string/fat_per_unit" />

                <EditText
                    android:id="@+id/fat_per_unit_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:onTextChanged="@{(s, start, before, count) -> listener.onFatChanged(s)}"
                    android:text="@{String.valueOf(food.fatPerUnit)}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_small"
                    android:text="@string/carbs_per_unit" />

                <EditText
                    android:id="@+id/carbs_per_unit_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:onTextChanged="@{(s, start, before, count) -> listener.onCarbsChanged(s)}"
                    android:text="@{String.valueOf(food.carbsPerUnit)}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_small"
                    android:text="@string/kcal_per_unit" />

                <EditText
                    android:id="@+id/kcal_per_unit_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:onTextChanged="@{(s, start, before, count) -> listener.onKcalChanged(s)}"
                    android:text="@{String.valueOf(food.kcalPerUnit)}" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/save_food_button"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSaveClick"
            android:text="@string/save" />

    </LinearLayout>
</layout>