<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backround_activated"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/backround_activated"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <Button
            android:id="@+id/component_button"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_food"
            android:textSize="@dimen/text_size_medium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/component_grams_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ingredient_grams"
                android:inputType="number"
                android:maxLength="8"  />

            <TextView
                android:id="@+id/component_unit_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/delete_component"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/delete_food"
        android:src="@android:drawable/ic_menu_delete" />

</LinearLayout>